--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos placeat alias perferendis, totam facere cupiditate,
         voluptatum culpa iure unde similique veritatis nostrum. Odio quasi, beatae quis rem facilis molestias? Modi.
     </p>
+
+    <h2>CABECERA 2 PARA NUEVA RAMA</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos placeat alias perferendis, totam facere cupiditate,
+        voluptatum culpa iure unde similique veritatis nostrum. Odio quasi, beatae quis rem facilis molestias? Modi.
+    </p>
 </body>
 
 </html>
