--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos placeat alias perferendis, totam facere cupiditate,
         voluptatum culpa iure unde similique veritatis nostrum. Odio quasi, beatae quis rem facilis molestias? Modi.
     </p>
+    <p>parrafo añadido por oscar lopez</p>
 </body>
 
 </html>
